@@ -17,7 +17,6 @@ package com.thoughtworks.go.server;
 
 import com.thoughtworks.go.server.util.GoPlainSocketConnector;
 import com.thoughtworks.go.util.SystemEnvironment;
-import org.apache.commons.io.FileUtils;
 import org.eclipse.jetty.deploy.App;
 import org.eclipse.jetty.deploy.DeploymentManager;
 import org.eclipse.jetty.deploy.providers.WebAppProvider;
@@ -31,7 +30,6 @@ import org.eclipse.jetty.server.handler.HandlerCollection;
 import org.eclipse.jetty.server.handler.gzip.GzipHandler;
 import org.eclipse.jetty.server.session.SessionHandler;
 import org.eclipse.jetty.util.resource.Resource;
-import org.eclipse.jetty.webapp.JettyWebXmlConfiguration;
 import org.eclipse.jetty.webapp.WebAppContext;
 import org.eclipse.jetty.webapp.WebInfConfiguration;
 import org.eclipse.jetty.webapp.WebXmlConfiguration;
@@ -45,16 +43,19 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.management.ManagementFactory;
+import java.nio.file.Files;
+import java.util.Objects;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
 public class Jetty9Server extends AppServer {
-    protected static String JETTY_XML_LOCATION_IN_JAR = "/defaultFiles/config";
-    private static final String JETTY_XML = "jetty.xml";
-    private static final String JETTY_CONFIG_VERSION = "jetty-v9.4.48.v20220622";
-    private Server server;
-    private WebAppContext webAppContext;
+    static String JETTY_XML_LOCATION_IN_JAR = "/defaultFiles/config";
+    static final String JETTY_CONFIG_VERSION = "jetty-config-gocd-v9";
     private static final Logger LOG = LoggerFactory.getLogger(Jetty9Server.class);
+    private static final String JETTY_XML = "jetty.xml";
+    private final Server server;
+    private WebAppContext webAppContext;
     private final DeploymentManager deploymentManager;
 
     public Jetty9Server(SystemEnvironment systemEnvironment) {
@@ -76,11 +77,11 @@ public class Jetty9Server extends AppServer {
         ContextHandlerCollection handlers = new ContextHandlerCollection();
         deploymentManager.setContexts(handlers);
 
-        createWebAppContext();
+        webAppContext = createWebAppContext();
 
         JettyCustomErrorPageHandler errorHandler = new JettyCustomErrorPageHandler();
         webAppContext.setErrorHandler(errorHandler);
-        webAppContext.setGzipHandler(gzipHandler());
+        webAppContext.insertHandler(gzipHandler());
         server.addBean(errorHandler);
         server.addBean(deploymentManager);
 
@@ -95,30 +96,30 @@ public class Jetty9Server extends AppServer {
     static GzipHandler gzipHandler() {
         GzipHandler gzipHandler = new GzipHandler();
         gzipHandler.addIncludedMimeTypes(
-                "application/javascript",
-                "application/json",
-                "application/vnd.go.cd.v1+json",
-                "application/vnd.go.cd.v2+json",
-                "application/vnd.go.cd.v3+json",
-                "application/vnd.go.cd.v4+json",
-                "application/vnd.go.cd.v5+json",
-                "application/vnd.go.cd.v6+json",
-                "application/vnd.go.cd.v7+json",
-                "application/vnd.go.cd.v8+json",
-                "application/vnd.go.cd.v9+json",
-                "application/xhtml+xml",
-                "image/svg+xml",
-                "text/css",
-                "text/html",
-                "text/plain",
-                "text/xml"
+            "application/javascript",
+            "application/json",
+            "application/vnd.go.cd.v1+json",
+            "application/vnd.go.cd.v2+json",
+            "application/vnd.go.cd.v3+json",
+            "application/vnd.go.cd.v4+json",
+            "application/vnd.go.cd.v5+json",
+            "application/vnd.go.cd.v6+json",
+            "application/vnd.go.cd.v7+json",
+            "application/vnd.go.cd.v8+json",
+            "application/vnd.go.cd.v9+json",
+            "application/xhtml+xml",
+            "image/svg+xml",
+            "text/css",
+            "text/html",
+            "text/plain",
+            "text/xml"
         );
         gzipHandler.addIncludedMethods("HEAD",
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE");
+            "GET",
+            "POST",
+            "PUT",
+            "PATCH",
+            "DELETE");
         return gzipHandler;
     }
 
@@ -167,7 +168,7 @@ public class Jetty9Server extends AppServer {
         if (systemEnvironment.useCompressedJs()) {
             AssetsContextHandler assetsContextHandler = new AssetsContextHandler(systemEnvironment);
             deploymentManager.addApp(new App(deploymentManager, webAppProvider, "assetsHandler", assetsContextHandler));
-            webAppContext.addLifeCycleListener(new AssetsContextHandlerInitializer(assetsContextHandler, webAppContext));
+            webAppContext.addEventListener(new AssetsContextHandlerInitializer(assetsContextHandler, webAppContext));
         }
 
         deploymentManager.addApp(new App(deploymentManager, webAppProvider, "realApp", webAppContext));
@@ -195,20 +196,20 @@ public class Jetty9Server extends AppServer {
             configuration.configure(server);
         } else {
             String message = String.format(
-                    "No custom jetty configuration (%s) found, using defaults.",
-                    jettyConfig.getAbsolutePath());
+                "No custom jetty configuration (%s) found, using defaults.",
+                jettyConfig.getAbsolutePath());
             LOG.info(message);
         }
     }
 
     protected void replaceJettyXmlIfItBelongsToADifferentVersion(File jettyConfig) throws IOException {
-        if (FileUtils.readFileToString(jettyConfig, UTF_8).contains(JETTY_CONFIG_VERSION)) return;
+        if (Files.readString(jettyConfig.toPath(), UTF_8).contains(JETTY_CONFIG_VERSION)) return;
         replaceFileWithPackagedOne(jettyConfig);
     }
 
     private void replaceFileWithPackagedOne(File jettyConfig) {
-        try (InputStream inputStream = getClass().getResourceAsStream(JETTY_XML_LOCATION_IN_JAR + "/" + jettyConfig.getName())) {
-            FileUtils.copyInputStreamToFile(inputStream, systemEnvironment.getJettyConfigFile());
+        try (InputStream inputStream = Objects.requireNonNull(getClass().getResourceAsStream(JETTY_XML_LOCATION_IN_JAR + "/" + jettyConfig.getName()))) {
+            Files.copy(inputStream, systemEnvironment.getJettyConfigFile().toPath(), REPLACE_EXISTING);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -219,24 +220,23 @@ public class Jetty9Server extends AppServer {
     }
 
     private WebAppContext createWebAppContext() {
-        webAppContext = new WebAppContext();
-        webAppContext.setDefaultsDescriptor(GoWebXmlConfiguration.configuration(getWarFile()));
+        WebAppContext context = new WebAppContext();
+        context.setDefaultsDescriptor(GoWebXmlConfiguration.configuration(getWarFile()));
 
-        webAppContext.setConfigurationClasses(new String[]{
-                WebInfConfiguration.class.getCanonicalName(),
-                WebXmlConfiguration.class.getCanonicalName(),
-                JettyWebXmlConfiguration.class.getCanonicalName()
+        context.setConfigurationClasses(new String[]{
+            WebInfConfiguration.class.getCanonicalName(),
+            WebXmlConfiguration.class.getCanonicalName()
         });
-        webAppContext.setContextPath(systemEnvironment.getWebappContextPath());
+        context.setContextPath(systemEnvironment.getWebappContextPath());
 
         // delegate all logging to parent classloader to avoid initialization of loggers in multiple classloaders
-        webAppContext.getSystemClasspathPattern().add("org.apache.log4j.");
-        webAppContext.getSystemClasspathPattern().add("org.slf4j.");
-        webAppContext.getSystemClasspathPattern().add("org.apache.commons.logging.");
+        context.getSystemClasspathPattern().add("org.apache.log4j.");
+        context.getSystemClasspathPattern().add("org.slf4j.");
+        context.getSystemClasspathPattern().add("org.apache.commons.logging.");
 
-        webAppContext.setWar(getWarFile());
-        webAppContext.setParentLoaderPriority(systemEnvironment.getParentLoaderPriority());
-        return webAppContext;
+        context.setWar(getWarFile());
+        context.setParentLoaderPriority(systemEnvironment.getParentLoaderPriority());
+        return context;
     }
 
     public Server getServer() {
